[package]
authors    =["Thor Kampefner <thorck@pm.me>"]
description="""benches bn254"""
edition    ="2021"
name       ="benches-bn254"
repository ="https://github.com/thor314/benches-bn254"
version    ="0.1.0"

[dependencies]
anyhow   ="1.0"
log       ="0.4" 
rand = "0.8"
halo2curves = "0.7"
ark-bn254    = "0.4.0"
ark-ec       = "0.4.0"
ark-ff       = "0.4.0"

[dev-dependencies]
# rstest    ="0.18"         # testing convenience proc-macros
# env_logger="0.11"
criterion ="0.5"

[[bench]]
name = "h2c"
harness = false

[[bench]]
name = "arkworks"
harness = false
